welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: too many arguments for method color: ()Unit
		T(i) = color(i)
                            ^Array1:13: error: too many arguments for method color: ()Unit
		T(i)=color(i)
                          ^Array1:15: error: not found: value i
	for(i<-1 to getMondeHauteur()-i) {
                                      ^